# simple-artefact-registry

./: .gitignore  CHANGES.md  README.md  pyproject.toml
src/simple_artefact_registry/: __init__.py  __main__.py
