[tool.poetry]
name = "simple-artefact-registry"
version = "0.3.0"
description = "A simple web-based registry for any kind of artefact"
authors = ["Mark Hall <mark.hall@open.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
